objects/VPPSR_Serial_Number_Search_Response__c.object
<CustomObject>
    <fields>
        <fullName>Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral</label>
        <referenceTo>clcommon__Collateral__c</referenceTo>
        <relationshipName>SerialNumberSearchResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>integrationErrorStatusCode__c</fullName>
        <label>integrationErrorStatusCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrationErrorStatus__c</fullName>
        <label>integrationErrorStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>message__c</fullName>
        <label>message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>search_Certificate_Number__c</fullName>
        <label>search Certificate Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSR Serial Number Search Response</label>
    <nameField>
        <displayFormat>VSNS-{0000000}</displayFormat>
        <label>VPPSR Serial Number Search Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Serial Number Search Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>